# survey-sim

./: .gitignore  Cargo.toml  README.md  config.defaults.yaml  fetch_data.py  fetch_ztf_depot.py  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/api/: python.md  rust.md
docs/architecture/: lightcurves.md  pipeline.md  populations.md  spatial.md
docs/examples/: fbot.md  grb_afterglow.md  gw_coverage.md  kilonova.md  snia.md  tde.md  ztf_kilonova.md  ztf_snia.md
instruments/: argus.yaml  rubin.yaml  ztf.yaml
python/: Cargo.toml  compare_models.py  pyproject.toml
python/scripts/: build_observing_scenario_hdf5.py  compare_metzger_bu2026.py  generate_argus_pointings.py  run_argus_grb_stacking.py  run_at2017gfo_ztf.py  run_at2017gfo_ztf_3yr.py  run_at2017gfo_ztf_fixed_incl.py  run_at2017gfo_ztf_vary_incl.py  run_fbot_rubin.py  run_fbot_ztf.py  run_grb_afterglow_argus.py  run_grb_afterglow_ztf.py  run_grb_offaxis_rubin.py  run_grb_offaxis_ztf.py  run_grb_onaxis_rubin.py  run_grb_onaxis_ztf.py  run_gw190425_coverage.py  run_kn_roman_hltds.py  run_metzger_bb_ztf.py  run_snia_rubin.py  run_tde_rates_forecast.py  run_tde_rubin.py  run_tde_ztf.py  tune_metzger_bb.py  upload_hf_data.py
python/src/: lib.rs  py_detection.rs  py_lightcurve.rs  py_pipeline.rs  py_population.rs  py_rates.rs  py_skymap.rs  py_survey.rs
python/survey_sim/: __init__.py  _lowlevel.pyi  data.py  fiesta_afterglow_model.py  fiesta_model.py  gpu_setup.py  salt3_model.py
src/: config.rs  instrument.rs  lib.rs  pipeline.rs  skymap.rs  types.rs
src/cadence/: mod.rs
tests/: test_cadence.rs  test_detection.rs  test_instrument.rs  test_pipeline.rs  test_population.rs  test_profile.rs  test_profile_diag.rs  test_rate_recovery.rs  test_rubin_year1.rs  test_spatial.rs  test_survey.rs  test_ztfrest.rs
(+25 files in other folders)
