[workspace]
members = [".", "python"]

[package]
name = "survey-sim"
version = "0.1.0"
edition = "2021"
description = "Survey simulation framework for transient astronomy"
license = "GPL-3.0"

[dependencies]
lightcurve-fitting = { git = "https://github.com/boom-astro/lightcurve-fitting" }
blastwave = { git = "https://github.com/nuclear-multimessenger-astronomy/blastwave", rev = "7d3b9cb" }
rusqlite = { version = "0.32", features = ["bundled"] }
cdshealpix = "0.7"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
rand_distr = "0.5"
ndarray = "0.16"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
csv = "1.3"
serde_yaml = "0.9"
hdf5 = { version = "0.12", package = "hdf5-metno" }
parquet = "57"
arrow = { version = "57", features = ["prettyprint"] }

[dev-dependencies]
approx = "0.5"
