[package]
name = "survey-sim-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "survey_sim"
crate-type = ["cdylib"]

[dependencies]
survey-sim = { path = ".." }
lightcurve-fitting = { git = "https://github.com/boom-astro/lightcurve-fitting" }
blastwave = { git = "https://github.com/nuclear-multimessenger-astronomy/blastwave" }
pyo3 = { version = "0.23", features = ["extension-module", "multiple-pymethods"] }
numpy = "0.23"
rayon = "1.10"
rand = "0.9"
